<resources>
    <string name="app_name">Currency</string>
    <string name="str_currencies">Valyuta kurslari</string>
    <string name="str_konvertatsiya">Konvertatsiya</string>
    <string name="str_convert_text">Jonli tariflarni tekshiring, miqdorni kiriting va konvertatsiya natijasiga ega bo`ling.</string>
    <string name="str_quantity">Miqdori</string>
    <string name="str_converted">Konvertatsiya qilingan miqdor</string>
    <string name="str_thousand">1000.00</string>
    <string name="str_indicate">Indikativ valyuta kursi</string>
</resources>

