<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/str_konvertatsiya"
        android:textColor="@color/primary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/str_convert_text"
        android:textColor="@color/secondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text_view" />

    <androidx.cardview.widget.CardView
        android:id="@+id/calculator_card_view"
        android:layout_width="340dp"
        android:layout_height="250dp"
        android:layout_marginVertical="30dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_text_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/str_quantity"
                android:textColor="@color/secondary"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/source_country_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/divider_view"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/source_country_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="50dp">

                    <ImageView
                        android:id="@+id/source_country_icon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:scaleType="centerCrop" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/source_currency_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/accent"
                    android:textSize="18sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/quantity_input"
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_secondary_shape"
                android:gravity="end|center"
                android:hint="@string/str_thousand"
                android:inputType="numberDecimal"
                android:paddingEnd="10dp"
                app:layout_constraintBottom_toTopOf="@id/divider_view"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:id="@+id/divider_view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="20dp"
                android:background="@color/secondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/center_circle_view"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:background="@drawable/round_shape"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/converted_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/str_converted"
                android:textColor="@color/secondary"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_view" />

            <LinearLayout
                android:id="@+id/destination_country_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/converted_label">

                <androidx.cardview.widget.CardView
                    android:id="@+id/destination_country_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="50dp">

                    <ImageView
                        android:id="@+id/destination_country_icon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:scaleType="centerCrop" />
                </androidx.cardview.widget.CardView>

                <Spinner
                    android:id="@+id/destination_currency_spinner"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <EditText
                android:id="@+id/result_output"
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_secondary_shape"
                android:gravity="end|center"
                android:hint="@string/str_thousand"
                android:inputType="numberDecimal"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/converted_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/result_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/str_indicate"
        android:textColor="@color/secondary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/calculator_card_view"
        app:layout_constraintTop_toBottomOf="@id/calculator_card_view" />

    <TextView
        android:id="@+id/result_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:textColor="@color/primary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/calculator_card_view"
        app:layout_constraintTop_toBottomOf="@id/result_label" />

</androidx.constraintlayout.widget.ConstraintLayout>
